--- a/_site.yml
+++ b/_site.yml
@@ -1,7 +1,7 @@
-name: "YOURNAME"                                # CHANGE HERE 
+name: "Marvin"                                # CHANGE HERE 
 output_dir: "."
 navbar:
-  title: "YOURNAME"                             # CHANGE HERE 
+  title: "Marvin"                             # CHANGE HERE 
   type: inverse
   left:
     - text: "Home"
